// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader renders a themed PageHeader component 1`] = `
<Wrapper
  className="sc-bdVaJa erXgsM"
  theme={[ThemeObject]}
>
  <div>
    Some text here
  </div>
</Wrapper>
`;

exports[`PageHeader renders a themed PageHeader component 2`] = `
<section
  className="sc-bdVaJa erXgsM"
>
  <div>
    Some text here
  </div>
</section>
`;
